Add basic tests -- namespaces incorrect

--- a/src/Verify.MSTest.SourceGenerator/Verify.MSTest.SourceGenerator.csproj
+++ b/src/Verify.MSTest.SourceGenerator/Verify.MSTest.SourceGenerator.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="all" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.126" PrivateAssets="all" />
   </ItemGroup>
 
   <!-- Package as a source generator -->
