--- a/src/StrictJsonTests/StrictJsonTests.csproj
+++ b/src/StrictJsonTests/StrictJsonTests.csproj
@@ -13,7 +13,8 @@
     <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
     <ProjectReference Include="..\Verify.Xunit\Verify.Xunit.csproj" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
-    <Compile Include="..\Verify.Tests\Serialization\SerializationTests.cs" Link="Serialization\SerializationTests.cs" />
+    <Compile Include="..\Verify.Tests\Serialization\SerializationTests.cs" />
+    <Compile Include="..\Verify.Tests\Serialization\OrderTests.cs" />
     <Content Include="..\Verify.Tests\sample.jpg">
       <Link>sample.jpg</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
