--- a/src/Verify.MSTest.SourceGenerator/Verify.MSTest.SourceGenerator.csproj
+++ b/src/Verify.MSTest.SourceGenerator/Verify.MSTest.SourceGenerator.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework> 
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>VerifyMSTest.SourceGenerator</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
