Add source generator to main package

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -20,4 +20,6 @@
     <Using Include="System.Linq.Expressions" />
     <Using Include="System.Collections.Specialized" />
   </ItemGroup>
+
+  <Sdk Name="ViHo.PackAsAnalyzer" />
 </Project>
