--- a/src/Verify.MSTest.SourceGenerator/Verify.MSTest.SourceGenerator.csproj
+++ b/src/Verify.MSTest.SourceGenerator/Verify.MSTest.SourceGenerator.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>VerifyMSTest.SourceGenerator</RootNamespace>
+    <AnalyzerLanguage>cs</AnalyzerLanguage>
+    <AnalyzerRoslynVersion>4.4</AnalyzerRoslynVersion>
+    <IsPackable>false</IsPackable> <!-- Packaged as part of the main Verify.MSTest package -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,9 +13,4 @@
     <PackageReference Include="ProjectDefaults" Version="1.0.126" PrivateAssets="all" />
   </ItemGroup>
 
-  <!-- Package as a source generator -->
-  <ItemGroup>
-    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" 
-        PackagePath="analyzers/dotnet/cs" Visible="false" />
-  </ItemGroup>
 </Project>
