--- a/src/Verify.MSTest/Verify.MSTest.csproj
+++ b/src/Verify.MSTest/Verify.MSTest.csproj
@@ -7,6 +7,10 @@
     <PackageReference Include="ProjectDefaults" Version="1.0.127" PrivateAssets="all" />
     <PackageReference Include="MSTest.TestFramework" Version="3.3.1" />
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\Verify.MSTest.SourceGenerator\Verify.MSTest.SourceGenerator.csproj"
+                      ReferenceOutputAssembly="false"
+                      PackAsAnalyzer="true"
+                      OutputItemType="Analyzer" />
     <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="buildTransitive\Verify.MSTest.props" />
     <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="build\Verify.MSTest.props" />
   </ItemGroup>
