--- a/src/NugetUsage/MSTestNugetUsage/MSTestNugetUsage.csproj
+++ b/src/NugetUsage/MSTestNugetUsage/MSTestNugetUsage.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- begin-snippet: mstest-nugets -->
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.3.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.3.1" />
+    <PackageReference Include="MSTest" Version="3.3.1" />
     <PackageReference Include="Verify.MSTest" Version="24.2.0" />
     <!-- end-snippet -->
   </ItemGroup>
