--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -34,6 +34,7 @@ build_script:
   - dotnet test src/Verify.Expecto.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
   - dotnet test src/Verify.Expecto.FSharpTests --configuration Release --no-build --no-restore --verbosity quiet
   - dotnet test src/Verify.Expecto.Tests --configuration Release --no-build --no-restore --verbosity quiet
+  - dotnet test src/Verify.MSTest.SourceGenerator.Tests --configuration Release --no-build --no-restore --verbosity quiet
   - vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net9.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
   - vstest.console src/Verify.MSTest.Tests/bin/Release/net48/Verify.MSTest.Tests.dll /logger:Appveyor
   - vstest.console src/Verify.MSTest.Tests/bin/Release/net9.0/Verify.MSTest.Tests.dll /logger:Appveyor
