--- a/src/Verify.Expecto.FSharpTests/Verify.Expecto.FSharpTests.fsproj
+++ b/src/Verify.Expecto.FSharpTests/Verify.Expecto.FSharpTests.fsproj
@@ -1,23 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
-        <GenerateProgramFile>false</GenerateProgramFile>
-        <LangVersion>preview</LangVersion>
-        <ImplicitUsings>enable</ImplicitUsings>
-    </PropertyGroup>
-    <ItemGroup>
-        <Compile Include="Tests.fs" />
-        <Compile Include="Main.fs" />
-        <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.14.3" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-        <PackageReference Include="Expecto" Version="10.2.1" />
-        <ProjectReference Include="..\Verify.Expecto\Verify.Expecto.csproj" />
-        <ProjectReference Include="..\Verify\Verify.csproj" />
-        <PackageReference Update="FSharp.Core" Version="8.0.300" />
-        <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
-    </ItemGroup>
-    <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
-    <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.targets" />
-    <Import Project="$(ProjectDir)..\Verify.Expecto\buildTransitive\Verify.Expecto.props" />
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net7.0</TargetFramework>
+    <GenerateProgramFile>false</GenerateProgramFile>
+    <LangVersion>preview</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="Tests.fs" />
+    <Compile Include="Main.fs" />
+    <PackageReference Include="YoloDev.Expecto.TestSdk" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Expecto" />
+    <ProjectReference Include="..\Verify.Expecto\Verify.Expecto.csproj" />
+    <ProjectReference Include="..\Verify\Verify.csproj" />
+    <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
+  </ItemGroup>
+  <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
+  <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.targets" />
+  <Import Project="$(ProjectDir)..\Verify.Expecto\buildTransitive\Verify.Expecto.props" />
 </Project>
