--- a/src/Verify.Expecto.Tests/Verify.Expecto.Tests.csproj
+++ b/src/Verify.Expecto.Tests/Verify.Expecto.Tests.csproj
@@ -5,9 +5,9 @@
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Expecto" Version="10.2.1" />
-    <PackageReference Include="FSharp.Core" Version="8.0.300" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.127" PrivateAssets="all" />
+    <PackageReference Include="Expecto" />
+    <PackageReference Include="FSharp.Core" />
+    <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Verify.Expecto\Verify.Expecto.csproj" />
   </ItemGroup>
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
