--- a/src/Verify.Expecto/Verify.Expecto.csproj
+++ b/src/Verify.Expecto/Verify.Expecto.csproj
@@ -3,9 +3,9 @@
     <TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Expecto" Version="10.2.1" />
-    <PackageReference Include="FSharp.Core" Version="8.0.300" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.127" PrivateAssets="all" />
+    <PackageReference Include="Expecto" />
+    <PackageReference Include="FSharp.Core" />
+    <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
     <None Include="buildTransitive\Verify.Expecto.props" Pack="true" PackagePath="buildTransitive\Verify.Expecto.props" />
     <None Include="buildTransitive\Verify.Expecto.props" Pack="true" PackagePath="build\Verify.Expecto.props" />
