--- a/src/Verify.MSTest/Verify.MSTest.csproj
+++ b/src/Verify.MSTest/Verify.MSTest.csproj
@@ -4,13 +4,10 @@
     <TargetFrameworks>$(TargetFrameworks);net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ProjectDefaults" Version="1.0.127" PrivateAssets="all" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.4.0" />
+    <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
+    <PackageReference Include="MSTest.TestFramework" />
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
-    <ProjectReference Include="..\Verify.MSTest.SourceGenerator\Verify.MSTest.SourceGenerator.csproj"
-                      ReferenceOutputAssembly="false"
-                      PackAsAnalyzer="true"
-                      OutputItemType="Analyzer" />
+    <ProjectReference Include="..\Verify.MSTest.SourceGenerator\Verify.MSTest.SourceGenerator.csproj" ReferenceOutputAssembly="false" PackAsAnalyzer="true" OutputItemType="Analyzer" />
     <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="buildTransitive\Verify.MSTest.props" />
     <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="build\Verify.MSTest.props" />
   </ItemGroup>
