--- a/src/Verify.SamplePlugin/Verify.SamplePlugin.csproj
+++ b/src/Verify.SamplePlugin/Verify.SamplePlugin.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="ProjectDefaults" Version="1.0.127" PrivateAssets="all" />
+        <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     </ItemGroup>
 
 </Project>
