--- a/usages/FixieNugetUsage/FixieNugetUsage.csproj
+++ b/usages/FixieNugetUsage/FixieNugetUsage.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <!-- begin-snippet: fixie-nugets -->
     <PackageReference Include="Fixie" Version="3.4.0" />
-    <PackageReference Include="Verify.Fixie" Version="24.3.0-beta.5" />
+    <PackageReference Include="Verify.Fixie" Version="25.0.0" />
     <!-- end-snippet -->
   </ItemGroup>
 </Project>
