--- a/usages/NUnitNugetUsage/NUnitNugetUsage.csproj
+++ b/usages/NUnitNugetUsage/NUnitNugetUsage.csproj
@@ -7,7 +7,7 @@
     <!-- begin-snippet: nunit-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit" Version="4.1.0" />
-    <PackageReference Include="Verify.NUnit" Version="24.3.0-beta.5" />
+    <PackageReference Include="Verify.NUnit" Version="25.0.0" />
     <!-- end-snippet -->
   </ItemGroup>
 </Project>
