--- a/usages/XunitNugetUsage/XunitNugetUsage.csproj
+++ b/usages/XunitNugetUsage/XunitNugetUsage.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <!-- begin-snippet: xunit-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="Verify.Xunit" Version="24.3.0-beta.5" />
+    <PackageReference Include="Verify.Xunit" Version="25.0.0" />
     <PackageReference Include="Xunit" Version="2.8.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1" PrivateAssets="all" />
     <!-- end-snippet -->
