--- a/usages/XunitNugetUsage/XunitNugetUsage.csproj
+++ b/usages/XunitNugetUsage/XunitNugetUsage.csproj
@@ -7,7 +7,7 @@
     <!-- begin-snippet: xunit-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="Verify.Xunit" Version="25.2.0" />
-    <PackageReference Include="Xunit" Version="2.8.1" />
+    <PackageReference Include="xunit" Version="2.9.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1" PrivateAssets="all" />
     <!-- end-snippet -->
   </ItemGroup>
