--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -17,11 +17,12 @@
     <PackageVersion Include="MarkdownSnippets.MsBuild" Version="27.0.2" />
     <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2"/>
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageVersion Include="MSTest" Version="3.5.0" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.5.0" />
     <PackageVersion Include="NUnit" Version="4.1.0" />
+    <PackageVersion Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageVersion Include="Polyfill" Version="6.0.0" />
     <PackageVersion Include="ProjectDefaults" Version="1.0.132" />
     <PackageVersion Include="PublicApiGenerator" Version="11.1.0" />
