--- a/src/Verify.NUnit.DerivePaths.Tests/Verify.NUnit.DerivePaths.Tests.csproj
+++ b/src/Verify.NUnit.DerivePaths.Tests/Verify.NUnit.DerivePaths.Tests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Verify.NUnit\Verify.NUnit.csproj" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
