--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -36,6 +36,8 @@
     <PackageVersion Include="Xunit" Version="2.9.0" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion Include="xunit.extensibility.execution" Version="2.9.0" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.0-pre.24" />
+<!--    <PackageVersion Include="xunit.v3" Version="0.2.0-pre.69" />-->
+<!--    <PackageVersion Include="xunit.v3.extensibility.core" Version="0.2.0-pre.69" />-->
   </ItemGroup>
 </Project>
