--- a/src/Verify.XunitV3/Verify.XunitV3.csproj
+++ b/src/Verify.XunitV3/Verify.XunitV3.csproj
@@ -6,14 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.abstractions" />
-    <PackageReference Include="xunit.extensibility.execution" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
+    <PackageReference Include="xunit.v3.extensibility.core" />
 
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
 
-    <None Include="buildTransitive\Verify.Xunit.props" Pack="true" PackagePath="buildTransitive\Verify.Xunit.props" />
-    <None Include="buildTransitive\Verify.Xunit.props" Pack="true" PackagePath="build\Verify.Xunit.props" />
+    <None Include="buildTransitive\Verify.XunitV3.props" Pack="true" PackagePath="buildTransitive\Verify.XunitV3.props" />
+    <None Include="buildTransitive\Verify.XunitV3.props" Pack="true" PackagePath="build\Verify.XunitV3.props" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
