--- a/src/Verify.XunitV3.Tests/Verify.XunitV3.Tests.csproj
+++ b/src/Verify.XunitV3.Tests/Verify.XunitV3.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">net48</TargetFrameworks>
     <TargetFrameworks>$(TargetFrameworks);net9.0</TargetFrameworks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <RuntimeIdentifiers Condition=" '$(OS)' == 'Windows_NT' ">win-x64</RuntimeIdentifiers>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
