--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -41,6 +41,8 @@ build_script:
       dotnet test src/Verify.Tests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore --verbosity quiet
+      dotnet test src/Verify.XunitV3.Tests --configuration Release --no-build --no-restore --verbosity quiet
+      dotnet test src/Verify.XunitV3.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
       if ($isWindows) {
         vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net9.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
         vstest.console src/Verify.MSTest.Tests/bin/Release/net48/Verify.MSTest.Tests.dll /logger:Appveyor
