Faster locking through .NET 9's System.Threading.Lock

--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Backport.System.Threading.Lock" />
     <PackageReference Include="Polyfill" PrivateAssets="all" />
     <PackageReference Include="System.IO.Hashing" />
     <PackageReference Include="DiffEngine" />
