--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageVersion Include="Argon" Version="0.21.0" />
     <PackageVersion Include="Argon.FSharp" Version="0.21.0" />
+    <PackageVersion Include="Backport.System.Threading.Lock" Version="1.0.1" />
     <PackageVersion Include="BenchmarkDotNet" Version="0.14.0" />
     <PackageVersion Include="DiffEngine" Version="15.5.0" />
     <PackageVersion Include="Expecto" Version="10.2.1" />
