--- a/usages/NUnitNugetUsage/NUnitNugetUsage.csproj
+++ b/usages/NUnitNugetUsage/NUnitNugetUsage.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="Verify.NUnit" Version="26.2.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <!-- end-snippet -->
   </ItemGroup>
 </Project>
