--- a/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
+++ b/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
     <!-- begin-snippet: xunitv3-nugets -->
