--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -310,3 +310,14 @@ ij_xml_space_inside_empty_tag = true
 
 [*.json]
 indent_size = 2
+
+# Verify settings
+# Extensions should be all the text files used by snapshots
+[*.{received,verified}.{txt,xml,json}]
+charset = "utf-8-bom"
+end_of_line = lf
+indent_size = unset
+indent_style = unset
+insert_final_newline = false
+tab_width = unset
+trim_trailing_whitespace = false
