--- a/src/Verify.Tests/InnerVerifyChecksTests/Valid/.gitattributes
+++ b/src/Verify.Tests/InnerVerifyChecksTests/Valid/.gitattributes
@@ -7,6 +7,5 @@
 
 
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
-*.verified.xml text eol=lf working-tree-encoding=UTF-8
-*.verified.json text eol=lf working-tree-encoding=UTF-8
+*.verified.html text eol=lf working-tree-encoding=UTF-8
 
