--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -32,6 +32,8 @@
     <PackageVersion Include="System.Memory" Version="4.5.5" />
     <PackageVersion Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
     <PackageVersion Include="TextCopy" Version="6.2.1" />
+    <PackageVersion Include="TUnit" Version="0.1.720" />
+    <PackageVersion Include="TUnit.Core" Version="0.1.720" />
     <PackageVersion Include="Xunit" Version="2.9.0" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion Include="xunit.extensibility.execution" Version="2.9.0" />
