--- a/src/Verify.TUnit/Verify.TUnit.csproj
+++ b/src/Verify.TUnit/Verify.TUnit.csproj
@@ -1,18 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT'">net472;net48</TargetFrameworks>
-    <TargetFrameworks>$(TargetFrameworks);net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
+    <PackageReference Include="TUnit.Core" />
 
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
 
-    <None Include="buildTransitive\Verify.NUnit.props" Pack="true" PackagePath="buildTransitive\Verify.NUnit.props" />
-    <None Include="buildTransitive\Verify.NUnit.props" Pack="true" PackagePath="build\Verify.NUnit.props" />
+    <None Include="buildTransitive\Verify.TUnit.props" Pack="true" PackagePath="buildTransitive\Verify.TUnit.props" />
+    <None Include="buildTransitive\Verify.TUnit.props" Pack="true" PackagePath="build\Verify.TUnit.props" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
