--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -13,10 +13,10 @@
     <PackageReference Include="Argon" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
 
-    <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="buildTransitive\Verify.props" />
-    <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="buildTransitive\Verify.targets" />
-    <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="build\Verify.props" />
-    <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="build\Verify.targets" />
+    <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="build\" />
+    <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
