--- a/src/Verify.Expecto/Verify.Expecto.csproj
+++ b/src/Verify.Expecto/Verify.Expecto.csproj
@@ -7,7 +7,7 @@
     <PackageReference Include="FSharp.Core" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
-    <None Include="buildTransitive\Verify.Expecto.props" Pack="true" PackagePath="buildTransitive\Verify.Expecto.props" />
-    <None Include="buildTransitive\Verify.Expecto.props" Pack="true" PackagePath="build\Verify.Expecto.props" />
+    <None Include="buildTransitive\Verify.Expecto.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.Expecto.props" Pack="true" PackagePath="build\" />
   </ItemGroup>
 </Project>
