--- a/src/Verify.Fixie/Verify.Fixie.csproj
+++ b/src/Verify.Fixie/Verify.Fixie.csproj
@@ -14,8 +14,8 @@
 
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
 
-    <None Include="buildTransitive\Verify.Fixie.props" Pack="true" PackagePath="buildTransitive\Verify.Fixie.props" />
-    <None Include="buildTransitive\Verify.Fixie.props" Pack="true" PackagePath="build\Verify.Fixie.props" />
+    <None Include="buildTransitive\Verify.Fixie.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.Fixie.props" Pack="true" PackagePath="build\" />
 
     <Compile Include="..\Verify\Guards.cs" />
     <Compile Include="..\Verify\Extensions.cs" />
