--- a/src/Verify.NUnit/Verify.NUnit.csproj
+++ b/src/Verify.NUnit/Verify.NUnit.csproj
@@ -11,8 +11,8 @@
 
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
 
-    <None Include="buildTransitive\Verify.NUnit.props" Pack="true" PackagePath="buildTransitive\Verify.NUnit.props" />
-    <None Include="buildTransitive\Verify.NUnit.props" Pack="true" PackagePath="build\Verify.NUnit.props" />
+    <None Include="buildTransitive\Verify.NUnit.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.NUnit.props" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
