--- a/src/Verify.TUnit/Verify.TUnit.csproj
+++ b/src/Verify.TUnit/Verify.TUnit.csproj
@@ -12,8 +12,8 @@
 
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
 
-    <None Include="buildTransitive\Verify.TUnit.props" Pack="true" PackagePath="buildTransitive\Verify.TUnit.props" />
-    <None Include="buildTransitive\Verify.TUnit.props" Pack="true" PackagePath="build\Verify.TUnit.props" />
+    <None Include="buildTransitive\Verify.TUnit.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.TUnit.props" Pack="true" PackagePath="build\" />
     <Compile Include="..\Verify\Guards.cs" />
     <Compile Include="..\Verify\Extensions.cs" />
   </ItemGroup>
