--- a/src/Verify.XunitV3/Verify.XunitV3.csproj
+++ b/src/Verify.XunitV3/Verify.XunitV3.csproj
@@ -12,8 +12,8 @@
 
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
 
-    <None Include="buildTransitive\Verify.XunitV3.props" Pack="true" PackagePath="buildTransitive\Verify.XunitV3.props" />
-    <None Include="buildTransitive\Verify.XunitV3.props" Pack="true" PackagePath="build\Verify.XunitV3.props" />
+    <None Include="buildTransitive\Verify.XunitV3.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.XunitV3.props" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
