--- a/usages/FixieNugetUsage/FixieNugetUsage.csproj
+++ b/usages/FixieNugetUsage/FixieNugetUsage.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
     <!-- begin-snippet: fixie-nugets -->
     <PackageReference Include="Fixie" Version="3.4.0" />
-    <PackageReference Include="Verify.Fixie" Version="26.6.0" />
+    <PackageReference Include="Verify.Fixie" Version="27.0.0-beta.5" />
     <!-- end-snippet -->
   </ItemGroup>
 </Project>
