--- a/usages/MSTestNugetUsage/MSTestNugetUsage.csproj
+++ b/usages/MSTestNugetUsage/MSTestNugetUsage.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
     <!-- begin-snippet: mstest-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    <PackageReference Include="MSTest" Version="3.6.0" />
-    <PackageReference Include="Verify.MSTest" Version="26.6.0" />
+    <PackageReference Include="MSTest" Version="3.6.1" />
+    <PackageReference Include="Verify.MSTest" Version="27.0.0-beta.5" />
     <!-- end-snippet -->
   </ItemGroup>
 </Project>
