--- a/usages/NUnitNugetUsage/NUnitNugetUsage.csproj
+++ b/usages/NUnitNugetUsage/NUnitNugetUsage.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
     <!-- begin-snippet: nunit-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit" Version="4.2.2" />
-    <PackageReference Include="Verify.NUnit" Version="26.6.0" />
+    <PackageReference Include="Verify.NUnit" Version="27.0.0-beta.5" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <!-- end-snippet -->
   </ItemGroup>
