--- a/usages/XunitNugetUsage/XunitNugetUsage.csproj
+++ b/usages/XunitNugetUsage/XunitNugetUsage.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
     <!-- begin-snippet: xunit-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    <PackageReference Include="Verify.Xunit" Version="26.6.0" />
+    <PackageReference Include="Verify.Xunit" Version="27.0.0-beta.5" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.35" PrivateAssets="all" />
     <!-- end-snippet -->
