--- a/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
+++ b/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
     <!-- begin-snippet: xunitv3-nugets -->
